fix: fix overflow-x at Board

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -1,13 +1,14 @@
 div.column {
-  width: 250px;
-  // min-height: 100px;
-  // height: fit-content;
+  width: 267px;
+  min-width: 267px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   background-color: rgb(240, 240, 241);
   border-radius: 5px;
-  padding: 15px;
+  padding: 10px 15px;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%);
   margin: 0 8px;
   position: relative;
@@ -27,7 +28,7 @@ div.column {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     position: relative;
     height: 50px;
   }
@@ -36,13 +37,16 @@ div.column {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     padding: 5px;
     border-radius: 5px;
     position: relative;
+    height: 40px;
 
     .column-edit {
       display: none;
+      height: 40px;
+      padding-top: 5px;
     }
 
     &:hover {
@@ -62,10 +66,10 @@ div.column {
   .title-edit {
     position: absolute;
     width: 100%;
+    top: 10px;
   }
 
   .title-edit__form {
-    background-color: #f0f0f1;
     height: 50px;
   }
 
